starting kafka
