# internal/models/federation_initiate_request_data.go
@@ -1,0 +1,6 @@
+package models
+
+type FederationInitiateRequestData struct {
+	FederationEndpoint string `json:"federationEndpoint" binding:"required"`
+	AuthEndpoint       string `json:"authEndpoint" binding:"required"`
+}
